[project]
name = "llm"
version = "0.1.0"
description = ""
authors = [
    {name = "mcgillij",email = "mcgillivray.jason@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "numpy (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch_rocm"
url = "https://download.pytorch.org/whl/rocm6.2.4"
priority = "explicit"


[[tool.poetry.source]]
name = "pytorch_rocm_nightly"
url = "https://download.pytorch.org/whl/nightly/rocm6.3"
priority = "explicit"

